# xyzrecover

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
examples/: water_methane.xyz
src/xyzrecover/: __init__.py  cli.py  core.py
src/xyzrecover.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_basic.py  test_cli.py  test_elements.py  test_iconic.py  test_parse.py  test_recover.py
